# Taskcall

./: .gitignore  INTERFACE_REQUIREMENTS.md  README.md  pyproject.toml
examples/: __init__.py  llm_factory_demo.py  minimal_demo.py
execution/: dag_executor.py  llm_executor.py  package_instantiator.py  run_dag_execution_probe.py  template_builder.py
mas_framework/agents/: __init__.py  adversarial_agent.py  agent_registry.py  analyze_agent.py  code_writing.py  final_decision.py  math_solver.py
mas_framework/graph/: __init__.py  graph.py  node.py
mas_framework/llm/: __init__.py  gpt_chat.py  llm.py  llm_registry.py  price.py  profile_embedding.py  visual_llm_registry.py
mas_framework/prompt/: AQuA_prompt_set.py  __init__.py  gaia_prompt_set.py  gsm8k_prompt_set.py  humaneval_prompt_set.py  mmlu_prompt_set.py  prompt_set.py  prompt_set_registry.py
mas_framework/utils/: const.py  log.py  utils.py
probe_scripts/: run_decomposition_probe.py
prompts/: instructions2.py
scripts/: download_math.py  sample_math_40.py
taskcall_perception_map/: __init__.py
taskcall_perception_map/agents/: __init__.py  base.py  manager.py  models.py  registry.py  runtime.py  store.py
taskcall_perception_map/capabilities/: __init__.py  base.py  permission_gate.py  registry.py
taskcall_perception_map/domain/: __init__.py  models.py
taskcall_perception_map/llm/: __init__.py  base.py  config.py  errors.py  factory.py  models.py  router.py  structured.py
taskcall_perception_map/planner/: __init__.py  contracts.py  default_prompt_builder.py  instructions.py  json_plan_parser.py  (+6 more)
(+23 files in other folders)
