[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "taskcall-perception-map"
version = "0.1.0"
description = "A Python skeleton for task-structured, DAG-driven agent execution."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["taskcall_perception_map*", "examples*"]
